# SpecLint

./: README.md  pyproject.toml
examples/: .speclint.yml  requirements.csv  requirements.md  requirements.yaml  requirements_example.xlsx
examples/junit/: sample-results.xml
src/speclint/: cli.py
src/speclint/core/: config.py  discovery.py  models.py
src/speclint/parsers/: csv_req.py  junit_xml.py  md_req.py  xlsx_req.py  yaml_req.py
src/speclint/reporters/: emit.py
src/speclint/rules/: engine.py
